# I03_TP

Prog_Hybride/: Notes.txt  PoissonMPI.tgz  PoissonOpenMP.tgz  PoissonSeq.tgz
Prog_Hybride/PoissonMPI/: CMakeLists.txt  Poisson.cpp  Poisson.hpp  Poisson_Parameters.cpp  run_poisson.sh  timer.hpp  values.cpp  version.hpp
Prog_Hybride/PoissonMPI_hgf/: CMakeLists.txt  Poisson.cpp  Poisson_Parameters.hpp  osutils.cpp  osutils.hpp  values.cpp  values.hpp
Prog_Hybride/PoissonOpenMP/: CMakeLists.txt  Poisson.cpp  Poisson_Parameters.cpp  main.cpp  values.hpp  version.hpp
Prog_Hybride/PoissonOpenMP_copie/: CMakeLists.txt  Poisson.cpp  Poisson.hpp  Poisson_Parameters.hpp  plot.hpp  values.cpp
Prog_Hybride/PoissonOpenMP_hgg/: CMakeLists.txt  Poisson.cpp  Poisson.hpp  Poisson_Parameters.hpp  main.cpp  plot.cpp  timer.cpp
Prog_Hybride/PoissonSeq/: CMakeLists.txt  GetPot  Poisson.cpp  Poisson_Parameters.cpp  Poisson_Parameters.hpp  values.cpp  version.hpp
Prog_Hybride/test_fs/: fs  main.cpp
TP_CUDA/: README.md
TP_CUDA/blas/: saxpy_cuda_c.tgz
TP_CUDA/blas/saxpy_cuda_c/: Makefile  README  Timer.cpp  Timer.h  saxpy.cu  tools.cu
TP_CUDA/chaleur/: heat2d3d_ensta2013_sujet.tgz
TP_CUDA/chaleur/heat2d3d_ensta2013_sujet/: CudaTimer.h  GetPot.h  Makefile  Makefile~  README  cuda_helper.cu  heat2d_cpu_000.vti  heat2d_cpu_001.vti  heat2d_cpu_002.vti  heat2d_cpu_003.vti  heat2d_cpu_004.vti  heat2d_cpu_005.vti  heat2d_cpu_006.vti  heat2d_cpu_007.vti  heat2d_cpu_008.vti  heat2d_cpu_009.vti  heat2d_cpu_010.vti  heat2d_cpu_011.vti  heat2d_cpu_012.vti  heat2d_cpu_013.vti  heat2d_cpu_014.vti  heat2d_cpu_015.vti  heat2d_cpu_016.vti  heat2d_cpu_017.vti  heat2d_cpu_018.vti  heat2d_cpu_019.vti  heat2d_cpu_020.vti  heat2d_cpu_021.vti  heat2d_cpu_022.vti  heat2d_cpu_023.vti  heat2d_cpu_024.vti  heat2d_cpu_025.vti  heat2d_cpu_026.vti  heat2d_cpu_027.vti  heat2d_cpu_028.vti  heat2d_cpu_029.vti  heat2d_cpu_030.vti  heat2d_cpu_031.vti  heat2d_cpu_032.vti  heat2d_cpu_033.vti  (+84 more)
TP_CUDA/helloworld/: helloworld  helloworld.cu  helloworld.cu~  helloworld_copy  helloworld_copy.cu
TP_CUDA/limitingFactor/: limitingFactor.cu  limitingFactor_v1  limitingFactor_v2
(+6 files in other folders)
